# cmake-project-template

./: CMakeLists.txt  README.md  myproject-config.cmake
.builds/: archlinux.yml
.circleci/: config.yml
cmake/: package-config.cmake.in  preamble.cmake
hello/: CMakeLists.txt  main.cpp
hello/src/: main.cpp
hello/tests/: README.md
helloworld/: CMakeLists.txt  README.md
helloworld/cmake/: preamble.cmake
helloworld/include/helloworld/: hello.h  helloworld.h  world.h
helloworld/package/archlinux/: .gitignore  PKGBUILD.in  build.sh  configure.sh
helloworld/src/helloworld/: hello.cpp  hello.test.cpp  helloworld.cpp  helloworld.test.cpp  world.cpp  world.test.cpp
libhello/: CMakeLists.txt  README.md
libhello/include/hello/: hello.h  hello_consumer.h
libhello/package/archlinux/: .gitignore  PKGBUILD  PKGBUILD.in  build.sh  configure.sh
libhello/package/debian/: .gitignore  create.sh
libhello/package/debian/debian.in/: control  lib-dev.install  rules  shlibs.local.ex
libhello/src/: hello.cpp  hello_consumer.cpp
libhello/test/: CMakeLists.txt  hello_consumer_test.cpp  hello_test.cpp  main.cpp
mybin/: CMakeLists.txt
mybin/src/: main.cpp
mylib/: CMakeLists.txt
mylib/include/mylib/: hello.h
mylib/src/: hello.cpp
mylib/test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
